@@ -40,6 +40,10 @@ hockeypuck (1.0~a1) precise; urgency=low
     - Symbolic link hack to work around launchpad build env issues.
   * debian/control:
     - Add libleveldb-dev to source build package dependencies.
+  * cmd/hockeypuck-mgo/main.go, hkp_types.go, mgo/worker.go,
+    peer/peer.go, recon.go, responses.go, worker.go:
+    - Refactored recon peer, key status information from loading keys.
+      Insert & remove recon ptree digests on key insert/update.
 
   [ Evan Broder ]
   * Makefile, mgo/client.go, mgo/worker.go:
